--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,9 +9,11 @@
 
 		<div class="p-4 sm:p-8 bg-gray-100">
 
-			<div class="mx-auto p-4 sm:p-8 max-w-4xl bg-white rounded-lg shadow-xl">
+			<div class="mx-auto p-4 sm:p-8 max-w-3xl bg-white rounded-lg shadow-xl">
 
-				{{ partial "social.html" . }}
+				<ul class="flex justify-end">
+					{{ partial "social.html" . }}
+				</ul>
 
 				{{ partial "header.html" . }}
 
@@ -19,6 +21,10 @@
 					{{ block "main" . }}{{ end }}
 				</div>
 				
+				<ul class="flex justify-center">
+					{{ partial "social.html" . }}
+				</ul>
+
 				{{ partial "footer.html" . }}
 
 			</div>
