--- a/layouts/partials/list-card.html
+++ b/layouts/partials/list-card.html
@@ -3,8 +3,8 @@
   {{ range $paginator.Pages }}
     <li class="mb-8 sm:mb-4 sm:p-4 sm:w-1/2 rounded-lg">
 
-      {{/*  配圖  */}}
-      {{ partial "cover.html" . }}
+      {{/*  縮圖  */}}
+      {{ partial "thumbnail.html" . }}
 
       {{/*  文章標題  */}}
       <h2 class="mb-2 font-bold text-lg">
