--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,8 +3,9 @@
 
 <title>{{ .Title }}</title>
 <meta name="description" content="{{ .Description }}">
-
-<link rel="canonical" href="{{ .Permalink }}">
+<meta name="robots" content="noindex,nofollow">
+{{/*  <link rel="canonical" href="{{ .Permalink }}">  */}}
+<link rel="canonical" href="https://en.letswrite.tw/">
 
 <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
