分類、標籤、上下篇、相關文章，樣式完成

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -27,46 +27,47 @@
 		<hr>
 
 		{{/*  categories  */}}
-		<p>Categories</p>
-		<ul>
+		<h4>Category：
 			{{ range .Params.categories }}
-				<li>
-					<a href="/categories/{{ . }}">{{ . }}</a>
-				</li>
+				<a class="capitalize" href="/categories/{{ . }}">{{ . }}</a>
 			{{ end }}
-		</ul>
-
-		<hr>
+		</h4>
 
 		{{/*  tags  */}}
-		<p>Tags</p>
-		<ul>
-			{{ range (.GetTerms "tags") }}
-				<li><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
-			{{ end }}
-		</ul>
-
-		<hr>
+		<h4>Tags</h4>
+		{{ range (.GetTerms "tags") }}
+			<a class="tag" href="{{ .RelPermalink }}">{{ .LinkTitle }}</a>
+		{{ end }}
 
 		{{/*  Prev / Next  */}}
-		{{ with .PrevInSection }}
-			上一篇 <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-		{{ end }}
-		{{ with .NextInSection }}
-			下一篇 <a href="{{ .RelPermalink }}">{{ .Title }}</a>
-		{{ end }}
+		<div class="flex flex-wrap justify-between">
+			{{ with .PrevInSection }}
+				<div class="sm:flex-1 pr-2 w-full sm:w-1/2">
+					<h4 class="!mb-0">Prev</h4>
+					<a href="{{ .RelPermalink }}">{{ .Title }}</a>
+				</div>
+			{{ end }}
+			{{ with .NextInSection }}
+				<div class="sm:flex-1 pl-2 w-full sm:w-1/2 text-right">
+					<h4 class="!mb-0">Next</h4>
+					<a href="{{ .RelPermalink }}">{{ .Title }}</a>
+				</div>
+			{{ end }}
+		</div>
 
 		<hr>
 
 		{{/*  相關文章  */}}
 		{{ $related := .Site.RegularPages.Related . | first 5 }}
 		{{ with $related }}
-			<p>相關文章</p>
-			<ul>
-				{{ range . }}
-					<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-				{{ end }}
-			</ul>
+			<div class="mb-8">
+				<h4 class="!mb-0">Related</h4>
+				<ul>
+					{{ range . }}
+						<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+					{{ end }}
+				</ul>
+			</div>
 		{{ end }}
 
 	</article>
