--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -82,3 +82,7 @@ hr {
 .single-article .highlight table pre {
   @apply p-2 max-w-full whitespace-normal
 }
+
+.single-article .tag {
+  @apply inline-block mr-2 px-4 py-1 border border-gray-300 rounded-lg text-sm text-gray-500 hover:bg-gray-400 hover:border-gray-400 hover:text-white
+}
