--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,11 @@
 {{ define "main" }}
 
+	<aside id="trigger-to-top"></aside>
+
+	<a id="js-to-top" class="fixed right-2 sm:right-10 bottom-2 sm:bottom-10 flex justify-center items-center w-10 h-10 bg-gray-300 rounded-lg transition-opacity" href="#">
+		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path fill="none" d="M0 0h24v24H0z"/><path d="M12 8l6 6H6z" fill="rgba(255,255,255,1)"/></svg>
+	</a>
+
 	<article class="single-article">
 
 		{{/*  cover  */}}
