--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,10 @@
 
 	<body class="bg-gray-100">
 
+		{{/*  GTM  */}}
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NDGP84X"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
 		{{ partial "schema.html" . }}
 
 		<div class="p-4 sm:p-8 bg-gray-100">
