--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,9 +3,7 @@
 
 <title>{{ .Title }}</title>
 <meta name="description" content="{{ .Description }}">
-<meta name="robots" content="noindex,nofollow">
-{{/*  <link rel="canonical" href="{{ .Permalink }}">  */}}
-<link rel="canonical" href="https://en.letswrite.tw/">
+<link rel="canonical" href="{{ .Permalink }}">
 
 <meta http-equiv="X-UA-Compatible" content="ie=edge, chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
@@ -29,5 +27,9 @@
 {{/*  Open Graph  */}}
 {{ template "_internal/opengraph.html" . }}
 
-{{/*  GA 4  */}}
-{{ template "_internal/google_analytics.html" . }}
+{{/*  GTM  */}}
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NDGP84X');</script>
