--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,3 +1,3 @@
 {{ define "main" }}
-  <p class="text-center font-bold text-2xl">OOPS! Can not find this page.</p>
+  <p class="my-8 text-center font-bold text-2xl">Oops! That page can not be found.</p>
 {{ end }}
