--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -113,6 +113,6 @@ hr {
 .single-article blockquote p + p {
   @apply mt-2;
 }
-.single-article p code {
+.single-article code {
   @apply bg-main bg-opacity-20 px-1 py-0.5 rounded;
 }
