--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,42 +1,47 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 
-	{{ partial "head.html" . }}
+{{ partial "head.html" . }}
 
-	<body class="bg-gray-100">
+<body class="bg-gray-100">
 
-		{{/*  GTM  */}}
-		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NDGP84X"
-		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	{{/* GTM */}}
+	<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NDGP84X" height="0" width="0"
+			style="display:none;visibility:hidden"></iframe></noscript>
 
-		{{ partial "schema.html" . }}
+	{{ partial "schema.html" . }}
 
-		<div class="p-4 sm:p-8 bg-gray-100">
+	<div class="p-4 sm:p-8 bg-gray-100">
 
-			<div class="mx-auto p-4 sm:p-8 max-w-3xl bg-white rounded-lg shadow-xl">
+		<div class="mx-auto p-4 sm:p-8 max-w-3xl bg-white rounded-lg shadow-xl">
 
-				<ul class="flex justify-end">
+			<div class="flex justify-between items-center">
+				<ul class="flex items-center">
 					{{ partial "social.html" . }}
 				</ul>
-
-				{{ partial "header.html" . }}
-
-				<div>
-					{{ block "main" . }}{{ end }}
+				<div class="sm:w-1/2">
+					<div class="gcse-search"></div>
 				</div>
-				
-				<ul class="flex justify-center">
-					{{ partial "social.html" . }}
-				</ul>
-
-				{{ partial "footer.html" . }}
-
 			</div>
+
+			{{ partial "header.html" . }}
+
+			<div>
+				{{ block "main" . }}{{ end }}
+			</div>
+
+			<ul class="flex justify-center">
+				{{ partial "social.html" . }}
+			</ul>
+
+			{{ partial "footer.html" . }}
 
 		</div>
 
-		{{ partial "js.html" . }}
+	</div>
 
-	</body>
+	{{ partial "js.html" . }}
+
+</body>
 
 </html>
