--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -2,9 +2,7 @@
   {{ $currentPage := . }}
   {{ $title := .Params.navActiveTitle }}
   {{ range .Site.Menus.main }}
-    <a
-      class="{{ if eq $title .Name }}active text-main{{ end }} px-4 hover:text-main"
-      href="{{ .URL }}"
-      title="{{ .Title }}">{{ .Name }}</a>
+  <a class="{{ if eq $title .Name }}active text-main{{ end }} px-4 hover:text-main" href="{{ .URL }}"
+    title="{{ .Title }}">{{ .Name }}</a>
   {{ end }}
 </nav>
